# csc299-project

./: README.md  SUMMARY.md  pyproject.toml  video.txt
final-project/: .gitignore  README.md  __init__.py  ai_summary.py  main.py  task_manager.py  test_cli.py
names/: README.md
names/.specify/memory/: constitution.md
names/.specify/templates/: plan-template.md  tasks-template.md
names/src/task_manager/: __init__.py  cli.py  storage.py
names/tests/: test_cli.py  test_storage.py
task5/: README.md  main.py  names.json  pyproject.toml  test_cli.py  test_model.py  test_storage.py  uv.json
task5/.specify/memory/: constitution.md
task5/schema/: v1.json
task5/specs/002-name-storage-cli/: spec.md
tasks1/task-manager/: README.md  requirements.txt  tasks.json
tasks1/task-manager/specs/: PLAN.md
tasks1/task-manager/src/: cli.py  main.py  task_manager.py  utils.py
tasks2/: tasks.json
tasks2/task-manager/: README.md  requirements.txt
tasks2/task-manager/src/: cli.py  main.py  utils.py
tasks3/: pyproject.toml
tasks3/backup_tasks3_copy_20251116/: README.md  pyproject.toml  requirements-dev.txt
tasks3/backup_tasks3_copy_20251116/src/tasks3/: __init__.py
tasks3/src/tasks3/: main.py
tasks3/task-manager/: README.md  requirements.txt
tasks3/task-manager/src/: __init__.py  pyproject.toml
tasks3/task-manager/src/tasks3/: __init__.py  __main__.py  main.py
tasks3/task-manager/tests/: test_cli.py  test_utils.py
tasks3/tasks3/: README.md
tasks3/tasks3/tests/: test_tasks3.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __main__.py
(+3 files in other folders)
