[tool.poetry]
name = "tasks4"
version = "0.1.0"
description = "A tool for summarizing task descriptions into short actionable phrases."
authors = ["IQ-ai3"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"