[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project]
name = "tasks3"
version = "0.0.0"
description = "Tasks3 package for csc299-project (top-level)"
authors = [ { name = "IQ-ai3" } ]

[project.scripts]
tasks3 = "tasks3.main:main"
